# str-assistant

./: .env.example  .gitignore  Containerfile  Makefile  README.md  compose.yaml  pyproject.toml
str_assistant/: __init__.py
str_assistant/agent_config/: system-prompt.md
str_assistant/agent_config/agents/: return-results.md  search-agent.md  synthesis-agent.md
str_assistant/agent_config/skills/str-intake/: skill.md
str_assistant/src/: api.py  main.py  schema.py  settings.py
str_assistant/src/core/: agent.py  agent_utils.py  backend.py  manager.py  prompt.py  storage.py
str_assistant/src/core/exceptions/: __init__.py  exceptions.py
str_assistant/src/routes/: __init__.py  feedback.py  health.py  history.py  stream.py  threads.py
str_assistant/utils/: __init__.py  pylogger.py
