[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["str_assistant"]

[project]
name = "str-assistant"
version = "0.1.0"
description = "STR Assistant — AI agent for Short-Term Rental investment analysis"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "deepagents==0.4.12",
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
    "python-multipart>=0.0.9",
    "langchain-google-genai>=2.1.0",
    "langchain-mcp-adapters>=0.2.2",
    "langgraph-checkpoint-postgres>=2.0.0",
    "psycopg[binary,pool]>=3.1.0",
    "structlog>=24.0.0",
    "pyyaml>=6.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest==8.4.1",
    "pytest-asyncio==1.0.0",
    "pytest-cov==6.2.1",
    "ruff==0.12.2",
    "httpx==0.28.1",
]

[project.scripts]
str-assistant = "str_assistant.src.main:main"

[project.urls]
Homepage = "https://github.com/reidbryant/str-assistant"
Repository = "https://github.com/reidbryant/str-assistant"

[tool.ruff]
target-version = "py312"
line-length = 88
lint.select = ["E", "W", "F", "I"]
lint.ignore = ["E501"]
